<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_folder"
        android:title="@string/select_folder"
        android:icon="@drawable/ic_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rescan"
        android:title="@string/rescan"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_genres"
        android:title="@string/view_by_genre"
        android:icon="@drawable/ic_genre"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sleep_timer"
        android:title="@string/sleep_timer"
        android:icon="@drawable/ic_timer"
        app:showAsAction="never" />

</menu>
